--- a/book-service/src/main/resources/bootstrap.properties
+++ b/book-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 spring.application.name=book-service
-spring.config.import=configserver:http://localhost:8888
-spring.cloud.config.import-check.enabled=false.
+spring.config.import=optional:configserver:http://localhost:8889
+spring.cloud.config.enabled=true
+spring.cloud.config.import-check.enabled=false
