--- a/config-repo/review-service.properties
+++ b/config-repo/review-service.properties
@@ -1,11 +1,14 @@
 server.port=8084
 spring.application.name=review-service
-spring.datasource.url=jdbc:mysql://localhost:3306/reviewdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/mylibrarydb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.data.rest.base-path=/api
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 management.endpoints.web.exposure.include=health,info,refresh
+management.endpoint.health.show-details=always
