--- a/frontend/library-app/.env
+++ b/frontend/library-app/.env
@@ -1,4 +1,4 @@
-SSL_CRT_FILE=ssl-localhost/localhost.crt
-SSL_KEY_FILE=ssl-localhost/localhost.key
-
-REACT_APP_API='https://localhost:8443/api'
+REACT_APP_API=http://localhost:8082/api
+HTTPS=false
+GENERATE_SOURCEMAP=false
+ESLINT_NO_DEV_ERRORS=true
