--- a/book-service/pom.xml
+++ b/book-service/pom.xml
@@ -62,6 +62,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-rest</artifactId>
+</dependency>
+        <dependency>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-starter-bootstrap</artifactId>
 </dependency>
