--- a/frontend/library-app/package.json
+++ b/frontend/library-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.6.0",
     "@okta/okta-react": "^6.4.3",
     "@okta/okta-signin-widget": "^6.3.3",
     "@stripe/react-stripe-js": "^1.9.0",
