fixing-login-using-jws

--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -27,6 +27,13 @@ spring:
     rest:
       base-path: /api
 
+  # THÊM MỚI: Cấu hình Auth0 JWT validation
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://dev-nkq0liomsorgp780.us.auth0.com/
+
 server:
   port: 8082
 
