--- a/config-repo/book-service.properties
+++ b/config-repo/book-service.properties
@@ -1,6 +1,6 @@
 server.port=8082
 spring.application.name=book-service
-spring.datasource.url=jdbc:mysql://localhost:3306/mylibrarydb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bookdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
